Edit Portfolio description

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             </div>
                             <div class="slide">
                                     <p id="questions"> Oh no, I made a typo, can I edit? </p>
-                                    <p>Of course, click on the task directly and you can edit as you wish. It's as simple as that! If you no longer need the task, press the del button and voila! it's gone. </p>
+                                    <p>Of course, click on the task directly and you can edit as you wish. It's as simple as that! If you no longer need the task, press the 'del' button and voila! it's gone. </p>
                             </div>
                         </div>
                                 <div class="manual">
