--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./src/styles/reset.scss" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="icon" type="image/png" href="/src/img/favicon.ico" />
-
+        <meta name="image" property="og:image" content="./src/img/FlexBoard.png">
         <!-- <link rel="stylesheet" href="./src/styles/index.scss" /> -->
     </head>
 
